2012-08-02  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_set_bitmap_color):
	new function

	* lua/lua-avt.c (lavt_set_bitmap_color): new function

2012-08-01  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_put_raw_image_file)
	(avt_put_raw_image_stream, avt_put_raw_image_data)
	(avt_put_raw_image_xpm): new functions

	* avatar-sdl.c (avt_import_image): new function
	(avt_show_raw_image): adapted

	* avatar-sdl.c (avt_put_image_rw): new function

	* lua/akfavatar-graphic.c (lgraphic_put_file, import_xpm)
	(lgraphic_put_image): new functions

2012-07-31  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c: prepare support for alpha channel

2012-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* about2html: full support for overstrike and page breaks

2012-07-15  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_get_balloon_color):
	new function

	* filechooser.c: markcolor depending on balloon color

	* lua/lua-avt.c (lavt_menu): markcolor depending on balloon color

	* lua/lua-akfavatar-prg.c (ask_file): different color

2012-07-11  Andreas K. Foerster  <info@akfoerster.de>

	* configure: use gnu99 (or MinGW disables some POSIX functions)

2012-07-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (initialize_lua):
	for GNU/Linux add relative paths to package.path and package.cpath
	lua/lua-avt.c (set_datapath): don't do that in the module

	* lua/lua-akfavatar-prg.c (initialize_lua):
	load lua-akfavatar already

2012-07-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (get_base_directory): new functions
	(set_datapath): adapted

	* lua/lua-avt.c (set_datapath):
	eventually also add to package.path and package.cpath

	* basedir.c: new file
	lua/lua-akfavatar-prg.c (find_scripts, local_lua_dir): adapted
	lua/lua-avt.c (set_datapath): adapted

2012-07-08  Andreas K. Foerster  <info@akfoerster.de>
